# Hybrid-RAG-System-for-Domain-Specific-Knowledge-Retrieval

./: .gitignore  README.md  bm25_index.py  check_qdrant_points.py  custom_types.py  data_loader.py  main.py  pyproject.toml  query_engine.py  rag_trace.py  reranker.py  retrieval_pipeline.py  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/10696758-259e-424d-80ca-6142a137572d/: mutable_id_tracker.mappings
